k8s/prom-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-k8s
  namespace: monitoring
spec:
  type: LoadBalancer
  ports:
    - port: 9090
      targetPort: 9090
  selector:
    app: prometheus
