k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-app-service
  namespace: dev
spec:
  type: LoadBalancer
  selector:
    app: node-app
  ports:
    - port: 3000
      targetPort: 3000
